--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,13 @@
-.logo1 {
-  color: #2196f3;
+
+/* Hero */
+.hero {
+  background-color: #2f303a;
 }
-.logo2 { color: #FFFFFF;}
-footer {background-color: #2F303A;}
+.hero-title {
+  color: #ffffff;
+}
+.hero-link {
+  color: #ffffff;
+}
+
+
