--- a/css/common.css
+++ b/css/common.css
@@ -12,10 +12,18 @@
   
   .logo-part-one {
     color: #2196f3;
+    font-family: 'Raleway', sans-serif;
+    font-size: 26px;
   }
-  .logo-part-two {color: var(--accent-color);}
+  .logo-part-two {
+    color: var(--accent-color); 
+    font-family: 'Raleway', sans-serif;
+    font-size: 26px;
+  }
   .logo-parttwo-footer {
     color: #ffffff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 26px;
   }
   /* nav */
   .site-nav .link {
