--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-
+/* For index.html */
 /* Hero */
 .hero {
   background-color: #2f303a;
@@ -9,7 +9,12 @@
 .hero-link {
   color: #ffffff;
 }
+body {font-family: Roboto, sans-serif; letter-spacing: 0.03em;}
 
 /* For portfolio.htlm */
-
-
+.portfolio a {text-decoration: none;}
+.portfolio h2 {color: var(--accent-color); font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;}
+.portfolio p {color: #757575;}
