--- a/css/common.css
+++ b/css/common.css
@@ -33,6 +33,8 @@
 
   .auth-footer {color: rgba(255, 255, 255, 0.6);}
 
+  body {font-family: 'Roboto'}
+
   header { background-color: var(--primary-white-color);}
    ul {
     list-style: none;
