--- a/css/common.css
+++ b/css/common.css
@@ -4,51 +4,100 @@
 Цвет link color: #2196f3;
 Цвет hero and footer color: #2F303A */
 
-
 :root {
-    --accent-color: #212121;
-    --primary-white-color: #ffffff;
-  }
-  
-  .logo-part-one {
-    color: #2196f3;
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-  }
-  .logo-part-two {
-    color: var(--accent-color); 
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-  }
-  .logo-parttwo-footer {
-    color: #ffffff;
-    font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-  }
-  /* nav */
-  .site-nav .link {
-    color: var(--accent-color);
-  }
-  .site-nav .link:hover,
-  .site-nav .link:focus {
-    color: #2196f3;
-  }
-  .site-nav .link.current {color: #2196f3;}
+  --primary-black-color: #212121;
+  --primary-white-color: #ffffff;
+  --link-color: #2196f3;
+}
 
-  .auth-nav .link {color: #757575;}
-  .auth-nav .link:hover,
-  .auth-nav .link:focus {color: #2196f3}
+/* Лого */
+.logo {
+  color: var(--primary-black-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  text-decoration: none;
+}
 
-  .auth-footer {color: rgba(255, 255, 255, 0.6);}
+.logo .accent {
+  color: var(--link-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+}
 
-  body {font-family: 'Roboto'}
+.accent-footer {
+  color: var(--primary-white-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+}
+/* nav */
+.site-nav .link {
+  color: var(--primary-black-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--link-color);
+}
+.site-nav .link.current {
+  color: var(--link-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 
-  header { background-color: var(--primary-white-color);}
-   ul {
-    list-style: none;
-  }
-  /* .list {list-style: none;} */
-  footer {
-    background-color: #2f303a;
-  }
-  
+.auth-nav .link {
+  color: #757575;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+  color: var(--link-color);
+}
+
+body {
+  color: var(--primary-black-color);
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+}
+
+header {
+  background-color: var(--primary-white-color);
+}
+ul {
+  list-style: none;
+}
+/* .list {list-style: none;} */
+
+/* Footer */
+
+footer {
+  background-color: #2f303a;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+}
+.adds {
+  color: var(--primary-white-color);
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+  font-style: normal;
+}
+.auth-footer {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.7;
+  text-decoration: none;
+  font-style: normal;
+}
