--- a/css/common.css
+++ b/css/common.css
@@ -10,60 +10,6 @@
   --link-color: #2196f3;
 }
 
-/* Лого */
-.logo {
-  color: var(--primary-black-color);
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  text-decoration: none;
-}
-
-.logo .accent {
-  color: var(--link-color);
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-}
-
-.accent-footer {
-  color: var(--primary-white-color);
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-}
-/* nav */
-.site-nav .link {
-  color: var(--primary-black-color);
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--link-color);
-}
-.site-nav .link.current {
-  color: var(--link-color);
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-
-.auth-nav .link {
-  color: #757575;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-}
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(--link-color);
-}
-
 body {
   color: var(--primary-black-color);
   font-family: Roboto, sans-serif;
@@ -73,10 +19,17 @@ body {
 
 header {
   background-color: var(--primary-white-color);
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
+
 ul {
   list-style: none;
 }
+
 /* .list {list-style: none;} */
 
 /* Footer */
@@ -101,3 +54,49 @@ footer {
   text-decoration: none;
   font-style: normal;
 }
+
+/* Лого */
+.logo {
+  color: var(--primary-black-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  text-decoration: none;
+}
+
+.logo .accent {
+  color: var(--link-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+}
+
+.accent-footer {
+  color: var(--primary-white-color);
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+}
+/* nav */
+.site-nav .link {
+  color: var(--primary-black-color);
+  text-decoration: none;
+ }
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--link-color);
+}
+
+.site-nav .link.current {
+  color: var(--link-color);
+  text-decoration: none;
+ }
+
+.auth-nav .link {
+  color: #757575;
+  text-decoration: none;
+ }
+ 
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+  color: var(--link-color);
+}
+
